src/OpenCvSharpExtern/core.h

CVAPI(ExceptionStatus) core_norm1(
    cv::_InputArray* src1, int normType, cv::_InputArray* mask, double *returnValue)
{
    return cvTry([&] {
    *returnValue = cv::norm(*src1, normType, entity(mask));
    });
}
CVAPI(ExceptionStatus) core_norm2(
    cv::_InputArray* src1, cv::_InputArray* src2,
    int normType, cv::_InputArray* mask, double* returnValue)
{
    return cvTry([&] {
    *returnValue = cv::norm(*src1, *src2, normType, entity(mask));
    });
}
CVAPI(ExceptionStatus) core_batchDistance(
    cv::_InputArray* src1, cv::_InputArray* src2,
    cv::_OutputArray* dist, int dtype, cv::_OutputArray* nidx,
    int normType, int K, cv::_InputArray* mask,
    int update, int crosscheck)
{
    return cvTry([&] {
    cv::batchDistance(
        *src1, *src2, *dist, dtype, *nidx, normType, K, entity(mask), update, crosscheck != 0);
    });
}
CVAPI(ExceptionStatus) core_normalize(
    cv::_InputArray* src, cv::_InputOutputArray* dst, double alpha, double beta, int normType, int dtype, cv::_InputArray* mask)
{
    return cvTry([&] {
    cv::InputArray maskVal = entity(mask);
    cv::normalize(*src, *dst, alpha, beta, normType, dtype, maskVal);
    });
}
CVAPI(ExceptionStatus) core_minMaxLoc1(cv::_InputArray* src, double* minVal, double* maxVal)
{
    return cvTry([&] {
    cv::minMaxLoc(*src, minVal, maxVal);
    });
}
CVAPI(ExceptionStatus) core_minMaxLoc2(cv::_InputArray* src, double* minVal, double* maxVal,
    interop::Point* minLoc, interop::Point* maxLoc, cv::_InputArray* mask)
{
    return cvTry([&] {
    cv::InputArray maskVal = entity(mask);
    cv::Point minLoc0, maxLoc0;
    cv::minMaxLoc(*src, minVal, maxVal, &minLoc0, &maxLoc0, maskVal);
    *minLoc = c(minLoc0);
    *maxLoc = c(maxLoc0);
    });
}
CVAPI(ExceptionStatus) core_minMaxIdx1(cv::_InputArray* src, double* minVal, double* maxVal)
{
    return cvTry([&] {
    cv::minMaxIdx(*src, minVal, maxVal);
    });
}
CVAPI(ExceptionStatus) core_minMaxIdx2(cv::_InputArray* src, double* minVal, double* maxVal,
    int* minIdx, int* maxIdx, cv::_InputArray* mask)
{
    return cvTry([&] {
    cv::InputArray maskVal = entity(mask);
    cv::minMaxIdx(*src, minVal, maxVal, minIdx, maxIdx, maskVal);
    });
}
CVAPI(ExceptionStatus) core_reduce(cv::_InputArray* src, cv::_OutputArray* dst, int dim, int rtype, int dtype)
{
    return cvTry([&] {
    cv::reduce(*src, *dst, dim, rtype, dtype);
    });
}
CVAPI(ExceptionStatus) core_merge(cv::Mat** mv, uint32_t count, cv::Mat* dst)
{
    return cvTry([&] {
    std::vector<cv::Mat> vec(static_cast<size_t>(count));
    for (uint32_t i = 0; i < count; i++)
        vec[i] = *mv[i];

    cv::merge(vec, *dst);
    });
}
CVAPI(ExceptionStatus) core_split(cv::Mat* src, std::vector<cv::Mat>* mv)
{
    return cvTry([&] {
    cv::split(*src, *mv);
    });
}
CVAPI(ExceptionStatus) core_mixChannels(cv::Mat** src, uint32_t nsrcs, cv::Mat** dst, uint32_t ndsts, int* fromTo, uint32_t npairs)
{
    return cvTry([&] {
    std::vector<cv::Mat> srcVec(static_cast<size_t>(nsrcs));
    std::vector<cv::Mat> dstVec(static_cast<size_t>(ndsts));
    for (uint32_t i = 0; i < nsrcs; i++)
        srcVec[i] = *(src[i]);
    for (uint32_t i = 0; i < ndsts; i++)
        dstVec[i] = *(dst[i]);

    cv::mixChannels(srcVec, dstVec, fromTo, npairs);
    });
}
CVAPI(ExceptionStatus) core_extractChannel(cv::_InputArray* src, cv::_OutputArray* dst, int coi)
{
    return cvTry([&] {
    cv::extractChannel(*src, *dst, coi);
    });
}
CVAPI(ExceptionStatus) core_insertChannel(cv::_InputArray* src, cv::_InputOutputArray* dst, int coi)
{
    return cvTry([&] {
    cv::insertChannel(*src, *dst, coi);
    });
}
CVAPI(ExceptionStatus) core_flip(cv::_InputArray* src, cv::_OutputArray* dst, int flipCode)
{
    return cvTry([&] {
    cv::flip(*src, *dst, flipCode);
    });
}
CVAPI(ExceptionStatus) core_repeat1(cv::_InputArray* src, int ny, int nx, cv::_OutputArray* dst)
{
    return cvTry([&] {
    cv::repeat(*src, ny, nx, *dst);
    });
}
CVAPI(ExceptionStatus) core_repeat2(cv::Mat* src, int ny, int nx, cv::Mat** returnValue)
{
    return cvTry([&] {
    const cv::Mat ret = cv::repeat(*src, ny, nx);
    *returnValue = new cv::Mat(ret);
    });
}
CVAPI(ExceptionStatus) core_hconcat1(cv::Mat** src, uint32_t nsrc, cv::_OutputArray* dst)
{
    return cvTry([&] {
    std::vector<cv::Mat> srcVec(static_cast<size_t>(nsrc));
    for (uint32_t i = 0; i < nsrc; i++)
        srcVec[i] = *(src[i]);
    cv::hconcat(&srcVec[0], nsrc, *dst);
    });
}
CVAPI(ExceptionStatus) core_hconcat2(cv::_InputArray* src1, cv::_InputArray* src2, cv::_OutputArray* dst)
{
    return cvTry([&] {
    cv::hconcat(*src1, *src2, *dst);
    });
}
CVAPI(ExceptionStatus) core_vconcat1(cv::Mat** src, uint32_t nsrc, cv::_OutputArray* dst)
{
    return cvTry([&] {
    std::vector<cv::Mat> srcVec(static_cast<size_t>(nsrc));
    for (uint32_t i = 0; i < nsrc; i++)
        srcVec[i] = *(src[i]);
    cv::vconcat(&srcVec[0], nsrc, *dst);
    });
}
CVAPI(ExceptionStatus) core_vconcat2(cv::_InputArray* src1, cv::_InputArray* src2, cv::_OutputArray* dst)
{
    return cvTry([&] {
    cv::vconcat(*src1, *src2, *dst);
    });
}
CVAPI(ExceptionStatus) core_bitwise_and(
    cv::_InputArray *src1, cv::_InputArray *src2, cv::_OutputArray *dst, cv::_InputArray *mask)
{
    return cvTry([&] {
    cv::bitwise_and(*src1, *src2, *dst, entity(mask));
    });
}
CVAPI(ExceptionStatus) core_bitwise_or(
    cv::_InputArray *src1, cv::_InputArray *src2, cv::_OutputArray *dst, cv::_InputArray *mask)
{
    return cvTry([&] {
    cv::bitwise_or(*src1, *src2, *dst, entity(mask));
    });
}
CVAPI(ExceptionStatus) core_bitwise_xor(
    cv::_InputArray *src1, cv::_InputArray *src2, cv::_OutputArray *dst, cv::_InputArray *mask)
{
    return cvTry([&] {
    cv::bitwise_xor(*src1, *src2, *dst, entity(mask));
    });
}
CVAPI(ExceptionStatus) core_bitwise_not(
    cv::_InputArray *src, cv::_OutputArray *dst, cv::_InputArray *mask)
{
    return cvTry([&] {
    cv::bitwise_not(*src, *dst, entity(mask));
    });
}
CVAPI(ExceptionStatus) core_absdiff(
    cv::_InputArray *src1, cv::_InputArray *src2, cv::_OutputArray *dst)
{
    return cvTry([&] {
    cv::absdiff(*src1, *src2, *dst);
    });
}
CVAPI(ExceptionStatus) core_inRange_InputArray(
    cv::_InputArray *src, cv::_InputArray *lowerb, cv::_InputArray *upperb, cv::_OutputArray *dst)
{
    return cvTry([&] {
    cv::inRange(*src, *lowerb, *upperb, *dst);
    });
}
CVAPI(ExceptionStatus) core_inRange_Scalar(
    cv::_InputArray *src, interop::Scalar lowerb, interop::Scalar upperb, cv::_OutputArray *dst)
{
    return cvTry([&] {
    cv::inRange(*src, cpp(lowerb), cpp(upperb), *dst);
    });
}
CVAPI(ExceptionStatus) core_compare(
    cv::_InputArray *src1, cv::_InputArray *src2, cv::_OutputArray *dst, int cmpop)
{
    return cvTry([&] {
    cv::compare(*src1, *src2, *dst, cmpop);
    });
}
CVAPI(ExceptionStatus) core_min1(cv::_InputArray *src1, cv::_InputArray *src2, cv::_OutputArray *dst)
{
    return cvTry([&] {
    cv::min(*src1, *src2, *dst);
    });
}
CVAPI(ExceptionStatus) core_min_MatMat(cv::Mat* src1, cv::Mat* src2, cv::Mat* dst)
{
    return cvTry([&] {
    cv::min(*src1, *src2, *dst);
    });
}
CVAPI(ExceptionStatus) core_min_MatDouble(cv::Mat* src1, double src2, cv::Mat* dst)
{
    return cvTry([&] {
    cv::min(*src1, src2, *dst);
    });
}
CVAPI(ExceptionStatus) core_max1(cv::_InputArray *src1, cv::_InputArray *src2, cv::_OutputArray *dst)
{
    return cvTry([&] {
    cv::max(*src1, *src2, *dst);
    });
}
CVAPI(ExceptionStatus) core_max_MatMat(cv::Mat *src1, const cv::Mat *src2, cv::Mat *dst)
{
    return cvTry([&] {
    cv::max(*src1, *src2, *dst);
    });
}
CVAPI(ExceptionStatus) core_max_MatDouble(cv::Mat *src1, double src2, cv::Mat *dst)
{
    return cvTry([&] {
    cv::max(*src1, src2, *dst);
    });
}
CVAPI(ExceptionStatus) core_sqrt(cv::_InputArray *src, cv::_OutputArray *dst)
{
    return cvTry([&] {
    cv::sqrt(*src, *dst);
    });
}
CVAPI(ExceptionStatus) core_pow_Mat(cv::_InputArray *src, double power, cv::_OutputArray *dst)
{
    return cvTry([&] {
    cv::pow(*src, power, *dst);
    });
}
CVAPI(ExceptionStatus) core_exp_Mat(cv::_InputArray *src, cv::_OutputArray *dst)
{
    return cvTry([&] {
    cv::exp(*src, *dst);
    });
}
CVAPI(ExceptionStatus) core_log_Mat(cv::_InputArray *src, cv::_OutputArray *dst)
{
    return cvTry([&] {
    cv::log(*src, *dst);
    });
}
CVAPI(ExceptionStatus) core_polarToCart(cv::_InputArray* magnitude, cv::_InputArray* angle,
    cv::_OutputArray* x, cv::_OutputArray* y, int angleInDegrees)
{
    return cvTry([&] {
    cv::polarToCart(*magnitude, *angle, *x, *y, angleInDegrees != 0);
    });
}
CVAPI(ExceptionStatus) core_cartToPolar(cv::_InputArray* x, cv::_InputArray* y,
    cv::_OutputArray* magnitude, cv::_OutputArray* angle, int angleInDegrees)
{
    return cvTry([&] {
    cv::cartToPolar(*x, *y, *magnitude, *angle, angleInDegrees != 0);
    });
}
CVAPI(ExceptionStatus) core_phase(cv::_InputArray* x, cv::_InputArray* y, cv::_OutputArray* angle, int angleInDegrees)
{
    return cvTry([&] {
    cv::phase(*x, *y, *angle, angleInDegrees != 0);
    });
}
CVAPI(ExceptionStatus) core_magnitude_Mat(cv::_InputArray* x, cv::_InputArray* y, cv::_OutputArray* magnitude)
{
    return cvTry([&] {
    cv::magnitude(*x, *y, *magnitude);
    });
}
CVAPI(ExceptionStatus) core_checkRange(cv::_InputArray* a, int quiet, interop::Point* pos, double minVal, double maxVal, int* returnValue)
{
    return cvTry([&] {
    cv::Point pos0;
    *returnValue = cv::checkRange(*a, quiet != 0, &pos0, minVal, maxVal);
    *pos = c(pos0);
    });
}
CVAPI(ExceptionStatus) core_patchNaNs(cv::_InputOutputArray *a, double val)
{
    return cvTry([&] {
    cv::patchNaNs(*a, val);
    });
}
CVAPI(ExceptionStatus) core_gemm(cv::_InputArray *src1, cv::_InputArray *src2, double alpha,
                      cv::_InputArray *src3, double gamma, cv::_OutputArray *dst, int flags)
{
    return cvTry([&] {
    cv::gemm(*src1, *src2, alpha, *src3, gamma, *dst, flags);
    });
}
CVAPI(ExceptionStatus) core_mulTransposed(cv::_InputArray *src, cv::_OutputArray *dst, int aTa,
                               cv::_InputArray *delta, double scale, int dtype)
{
    return cvTry([&] {
    cv::mulTransposed(*src, *dst, aTa != 0, entity(delta), scale, dtype);
    });
}
CVAPI(ExceptionStatus) core_transpose(cv::_InputArray *src, cv::_OutputArray *dst)
{
    return cvTry([&] {
    cv::transpose(*src, *dst);
    });
}
CVAPI(ExceptionStatus) core_transform(cv::_InputArray *src, cv::_OutputArray *dst, cv::_InputArray *m)
{
    return cvTry([&] {
    cv::transform(*src, *dst, *m);
    });
}
CVAPI(ExceptionStatus) core_perspectiveTransform(cv::_InputArray *src, cv::_OutputArray *dst, cv::_InputArray *m)
{
    return cvTry([&] {
    cv::perspectiveTransform(*src, *dst, *m);
    });
}
CVAPI(ExceptionStatus) core_perspectiveTransform_Mat(cv::Mat *src, cv::Mat *dst, cv::Mat *m)
{
    return cvTry([&] {
    cv::perspectiveTransform(*src, *dst, *m);
    });
}
CVAPI(ExceptionStatus) core_perspectiveTransform_Point2f(cv::Point2f *src, int srcLength, cv::Point2f *dst, int dstLength, cv::_InputArray *m)
{
    return cvTry([&] {
    const std::vector<cv::Point2f> srcVector(src, src + srcLength);
    std::vector<cv::Point2f> dstVector(dst, dst + dstLength);
    cv::perspectiveTransform(srcVector, dstVector, *m);
    });
}
CVAPI(ExceptionStatus) core_perspectiveTransform_Point2d(cv::Point2d *src, int srcLength, cv::Point2d *dst, int dstLength, cv::_InputArray *m)
{
    return cvTry([&] {
    const std::vector<cv::Point2d> srcVector(src, src + srcLength);
    std::vector<cv::Point2d> dstVector(dst, dst + dstLength);
    cv::perspectiveTransform(srcVector, dstVector, *m);
    });
}
CVAPI(ExceptionStatus) core_perspectiveTransform_Point3f(cv::Point3f *src, int srcLength, cv::Point3f *dst, int dstLength, cv::_InputArray *m)
{
    return cvTry([&] {
    const std::vector<cv::Point3f> srcVector(src, src + srcLength);
    std::vector<cv::Point3f> dstVector(dst, dst + dstLength);
    cv::perspectiveTransform(srcVector, dstVector, *m);
    });
}
CVAPI(ExceptionStatus) core_perspectiveTransform_Point3d(cv::Point3d *src, int srcLength, cv::Point3d *dst, int dstLength, cv::_InputArray *m)
{
    return cvTry([&] {
    const std::vector<cv::Point3d> srcVector(src, src + srcLength);
    std::vector<cv::Point3d> dstVector(dst, dst + dstLength);
    cv::perspectiveTransform(srcVector, dstVector, *m);
    });
}
CVAPI(ExceptionStatus) core_cubeRoot(float val, float* returnValue)
{
    return cvTry([&] {
    *returnValue = cv::cubeRoot(val);
    });
}
CVAPI(ExceptionStatus) core_fastAtan2(float y, float x, float* returnValue)
{
    return cvTry([&] {
    *returnValue = cv::fastAtan2(y, x);
    });
}